[S3KMD-802] Corrected UL bottom spacing.

--- a/swinburne-aem-prototype/source/scss/components/_contentblock.scss
+++ b/swinburne-aem-prototype/source/scss/components/_contentblock.scss
@@ -249,9 +249,12 @@
       }
       ul {
         padding-left: 15px;
-        font-size: 16px;
-        @include media-breakpoint-up(md) {
-          font-size: 20px;
+        li {
+          font-size: 16px;
+          margin-bottom: 8px;
+          @include media-breakpoint-up(md) {
+            font-size: 20px;
+          }
         }
       }
     }
